Fix ratings not showing production.

--- a/app/assets/stylesheets/card.scss
+++ b/app/assets/stylesheets/card.scss
@@ -4,15 +4,15 @@
   margin-bottom: 20px;
   overflow-x: hidden;
   .recipe-card-stats{
-    height: 62px;
+    height: 73px;
     border-bottom: 1px solid $gray;
     margin-bottom: 1rem;
     .nav-buttons {
-      height: 27px;
+      height: 36px;
     }
   }
   .card-body {
-    height: 296px;
+    height: 307px;
   }
   .description {
     height: 6rem;
